@@ -1,3 +1,5 @@
+    - fixed warnings with html_select_date and timestamp
+      functions (Monte)
     - added support for sub directory exlusion format (Monte)
     - added support for grouping by cache_id, compile_id
       and segments thereof (Monte)
